[gd_scene load_steps=2 format=2]

[ext_resource path="res://LLamadaAPI.gd" type="Script" id=1]

[node name="LLamadaAPI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -10.0
margin_right = 51.0
margin_bottom = 10.0
text = "Llamada a API"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button2" type="Button" parent="."]
margin_left = 613.063
margin_top = 293.45
margin_right = 695.063
margin_bottom = 313.45
text = "Otro bot√≥n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 26.8701
margin_top = 65.7611
margin_right = 449.87
margin_bottom = 396.761
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
